# party

./: .clang-format  .gitignore  INSTALLATION  Makefile  Makefile.in  chantab  close.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  debug_stty.c  ignore.c  input.c  makeopt.c  noisetab  opt.c  opttab.c  output.c  party.1  party.c  party.h  partyhlp  partytab  proc.c  run-configure  users.c
